# webrtc-signal

./: .gitignore  .python-version  README.md  pyproject.toml
tests/: test_core.py
webrtc_signal/: __main__.py  lib.py
