[tool.poetry]
name = "webrtc-signal"
version = "0.1.0"
description = "A signaling server for coordinating WebRTC peer connections"
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
aiodns = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
